Migration platform (#186)
* update gradle to version 8.6
* update project to use IntelliJ Platform Gradle Plugin v2.x version
* docs: Update docs with new task names

developper facing change:
   * task to verify plugin.xml is now :plugin:check
   * task to verify plugin compatibility is now :plugin:verfifyPlugin

note:
buildSearchableOptions has been removed because it was previously always set to false.

Signed-off-by: Vincent Gramer <vgramer@gmail.com>
Signed-off-by: Charlie Egan <charlieegan3@users.noreply.github.com>
Co-authored-by: Charlie Egan <charlieegan3@users.noreply.github.com>